feat: スクリプト分割と設定整理

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     </main>
 
     <script src="constants.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/config.js"></script>
+    <script src="scripts/dom.js"></script>
+    <script src="scripts/theme.js"></script>
+    <script src="scripts/font-scale.js"></script>
+    <script src="scripts/timer.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
